src/App.css
/* STEFAN */

.pictureIngredientsContainer {
  display: flex;
}

#buttons {
  display: flex;
  justify-content: center;
}

button {
  margin: 10px;
}

/* NITA */
/*footer styling*/

#footer {
  background-color: #d2b48c;
  min-width: 400px;
  min-height: 100px;
}
.footer-content {
  display: flex;
  margin-top: 20px;
}
.stay-touch {
  margin-left: 20%;
  font-style: italic;
}
.email-bar {
  display: block;
  margin-left: 20%;
  align-content: space-between;
}

.submit-button {
  background-color: black;
  color: white;
  min-width: 350px;
  min-height: 40px;
  border-color: black;
  font-style: italic;
}

.s-icon {
  font-size: 25px;

  display: flex;
  justify-content: space-between;
}
.input-button {
  background-color: white;
  min-width: 350px;
  min-height: 40px;
  text-align: center;
  text-decoration-color: black;
  margin-bottom: 10px;
  margin-top: 10px;
  font-style: italic;
}
#copyright1 {
  display: flex;
  justify-content: center;
  margin-top: 60px;
  font-size: 12px;
}
/*header styling*/

.header-container {
  display: flex;
  background-color: #d2b48c;
}

.header-container ul {
  list-style-type: none;
  padding: 0;
  display: flex;
  justify-content: space-between;
}

.header-container li {
  margin-left: 90px;
  margin-right: 90px;
  margin-top: 20px;
  text-decoration: none;
}

.header-container a {
  text-decoration: none;
  color: black;
  font-weight: bold;
  font-size: 2rem;
  font-style: italic;
}
.image-box img {
  background-image: url("hero-image.jpeg");
  padding-left: 0px;
  max-width: 100%;
  max-height: 100%;
  padding-right: 10px;
}
.text-overlay {
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: whitesmoke;
  opacity: 80%;
}
.text-overlay p {
  font-size: 3rem;
  font-style: italic;
}
.main-container {
  background-color: #d2b48c;
}
/*----container3 ----*/
.main-section {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0px;
  margin-top: 5%;
  align-items: flex-start;
}

.flex-container h2 {
  font-style: italic;
  font-weight: 3rem;
  font-weight: 2px solid black;
  margin: 2%;
}
.flex-container p {
  font-style: italic;
  font: 1em;
  font-weight: bold;
  margin: 2%;
}

/* DARELL */

/* KATE */
.mainContainer {
  margin: 0;
  padding: 0%;
  border: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  /* background-repeat: no-repeat; */
  background-size: cover;
  background-position: left center;
}

.recipeName {
  font-size: 50px;
  margin-top: 20px;
}

.pictureIngredientsContainer {
  display: flex;

  flex-direction: column-reverse;
  align-items: center;
  justify-content: space-evenly;
}

.recipeIngridients {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: large;
  margin: 30px;
}
ul {
  padding: 0;
}

ul li {
  list-style: none;
  padding: 10px 30px;
  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/5/5b/Rotten_Tomatoes.svg/1200px-Rotten_Tomatoes.svg.png");
  background-repeat: no-repeat;
  background-position: left center;
  background-size: 20px;
  font-size: 25px;
}

ol li {
  list-style: none;
  padding: 10px 30px;
  background-image: url("https://www.svgrepo.com/show/86058/check-mark.svg");
  background-repeat: no-repeat;
  background-position: left center;
  background-size: 20px;
  font-size: 25px;
}

.recipePicture {
  margin: 30px;
  display: flex;
  justify-content: center;
}

.recipePicture img {
  max-height: 400px;
  border-radius: 5%;
}

.homepageCardsContainer {
  display: flex;
  justify-content: space-between;
  margin-top: 5%;
  flex-wrap: wrap;
}

.homepageCardsImg {
  width: 300px;
  height: 300px;
  margin-top: 10%;
  opacity: 60%;
}
.homepageCardsImg:hover {
  opacity: 100%;
}
.cardContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  background-color: rgba(174, 176, 134, 0.5);
  padding: 2%;
}
.homepageCardsHeader {
  position: absolute;
  z-index: 100;
  color: rgb(11, 50, 11);
  font-size: 50px;
  font-weight: bold;
  left: 38px;
  top: 290px;
  text-decoration: none;
}

.categoryMealsCards {
  width: 400px;
  height: 410px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: rgba(174, 176, 134, 0.5);
  margin: 10px;
}
.categoryMealsCards h2 {
  color: rgb(11, 50, 11);
  font-size: 30px;
  font-weight: bold;
  opacity: 80%;
  margin: 4px;
}
.categoryMealsPicture {
  width: 300px;
  height: 300px;
  object-fit: cover;
  margin-top: 10%;
  opacity: 60%;
}

.categoryMealsPicture:hover {
  opacity: 100%;
}
html,
body {
  margin: 0;
}

